Add feedback form handle
